// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundButton should match the snapshot 1`] = `
<RoundButton__StyledButton>
  <RoundButton__StyledFaPlus />
</RoundButton__StyledButton>
`;

exports[`RoundButton should match the snapshot with icon 1`] = `
<RoundButton__StyledButton>
  <p>
    Mock
  </p>
</RoundButton__StyledButton>
`;

exports[`RoundButton should match the snapshot with icon 2`] = `
<RoundButton__StyledButton>
  <p>
    +
  </p>
</RoundButton__StyledButton>
`;
